Fix: PTM-Online-Import verliert namensgleiche Anmeldungen nicht mehr still
Eine zweite Online-Anmeldung mit demselben Namen fand die bereits verknüpfte
Meldelistenzeile, addMapping brach still ab und setOnlineDetails überschrieb
die Details der ersten Anmeldung; die zweite fehlte lokal ohne Hinweis.
Doppelte Namen blockieren das Aktualisieren der Meldeliste, deshalb wird die
Anmeldung jetzt nicht übernommen, sondern gemeldet. Nach dem Unterscheidbar-
machen des lokalen Namens übernimmt sie der nächste Abgleich.

- Namensgleiche Zeilen, die schon verknüpft oder im selben Lauf neu
  geschrieben sind, gelten nicht mehr als Zuordnungsziel.
- ImportErgebnis listet nicht übernommene Anmeldungen (namensgleich / nicht
  zuordenbar); Abgleich- und Rundenstart-Meldung zeigen sie an, lastSync
  bleibt dann stehen.
- Online-Namen werden getrimmt, Leerzeichen verhindern die Zuordnung nicht mehr.
- SheetMeldelisteAdapter las bei einer Meldeliste ohne vergebene Nr die
  Spaltenüberschrift als Meldung "Vorname Nachname"; der Abgleich hätte sie
  online angelegt. Die erste Datenzeile wird nun unter der Vorname-Überschrift
  erkannt.
- Übernahme vom Serverabruf getrennt (uebernehmeAnmeldungen), abgedeckt durch
  RegistrationImportZuordnungUITest.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>